welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:3: error: not found: value getColourSol
	getColourSol()
        ^Runner:4: error: not found: value getColourSol
	while(getColourSol()!="blue") {
              ^