welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (i <- 1 to 28) {
	getColourSol()
	while(getColourSol()!="blue") {
		avance()
	}
	gauche()
	avance()
	avance()
	droite()
}
